syntax = "proto3";

package payment;

option go_package = "go-grpc-payment/proto/payment";

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  int64 order_id = 1;
  float amount = 2;
  string currency = 3;
  string cred_card_number = 4;
}

message PaymentResponse {
  bool success = 1;
  string transaction_id = 2;
  string message = 3;
}
